adjust the css for visit-section grid to prevent overflowing text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,25 +127,22 @@ p {
 } */
 
 .visit-grid {
-    height: 100%;
+    height: min-content;
     width: 80%;
     margin: 0 auto;
     display: grid;
     column-count: 4;
     column-gap: 1rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    border:2px solid red;
 }
 
-/* .why-visit {
+.why-visit {
+    height: min-content;
     width: 100%;
-    margin: 4rem auto;
-    margin-bottom: 6rem;
-    padding: 0;
-} */
+}
 
 .visit-box-image {
-    height: 40%;
+    height: 300px;
     width: 100%;
     object-fit: cover;
 }
@@ -153,7 +150,7 @@ p {
 .visit-box-title {
     height: 10%;
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
     font-size: 1.25rem;
     font-weight: 600;
@@ -164,25 +161,17 @@ p {
 .visit-box-text {
     height: 50%;
     width: 100%;
-    margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
-} 
+}
 
 /* Conservation Video Styles */
 
 .farm-section-container {
     height: 100%;
     width: 80%;
-    display: block;
     margin: 0 auto;
-    margin-bottom: 6rem;
     text-align: center;
-}
-
-.farm-section-container h3 {
-    margin-bottom: 2rem;
-    font-size: 1.25rem;
 }
 
 video {
